--- a/ckanext/santamonica/templates/base.html
+++ b/ckanext/santamonica/templates/base.html
@@ -1,3 +1,4 @@
 {% ckan_extends %} {% block meta %}
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-{{ super() }} {% endblock %}
+{{ super() }} {% endblock %}{% block styles %} {{ super() }} {% asset
+'santamonica/footer' %} {% endblock %}
