--- a/ckanext/santamonica/templates/base.html
+++ b/ckanext/santamonica/templates/base.html
@@ -1,4 +1,4 @@
 {% ckan_extends %} {% block meta %}
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 {{ super() }} {% endblock %}{% block styles %} {{ super() }} {% asset
-'santamonica/footer' %} {% endblock %}
+'santamonica/footer' %} {% asset 'santamonica/base' %}{% endblock %}
