--- a/ckanext/santamonica/templates/home/index.html
+++ b/ckanext/santamonica/templates/home/index.html
@@ -66,7 +66,7 @@ h.get_site_statistics() %} {% block styles %} {{ super() }} {% asset
                     <div class="stat__value counter">
                       {{ h.SI_number_span(stats.organization_count) }}
                     </div>
-                    <div class="stat__description">Organizations</div>
+                    <div class="stat__description">Topics</div>
                   </div>
                 </div>
               </a>
