feat: fixed links on footer to be absolute

--- a/ckanext/santamonica/templates/footer.html
+++ b/ckanext/santamonica/templates/footer.html
@@ -8,11 +8,11 @@
                 <h6>Your City Hall</h6>
                 <ul class="footer--city-hall list-unstyled">
                   <li class="footer__nav-left__item">
-                    <a href="/contact" class="d-flex">Contact Us</a>
+                    <a href="https://santamonica.gov/contact" class="d-flex">Contact Us</a>
                   </li>
                   <li class="footer__nav-left__item">
                     <a
-                      href="/categories/your-city-hall/get-involved"
+                      href="https://santamonica.gov/categories/your-city-hall/get-involved"
                       class="d-flex"
                       >Get Involved</a
                     >
@@ -30,7 +30,7 @@
                     >
                   </li>
                   <li class="footer__nav-left__item">
-                    <a href="/about" class="d-flex">About Us</a>
+                    <a href="https://santamonica.gov/about" class="d-flex">About Us</a>
                   </li>
                   <li class="footer__nav-left__item">
                     <a
@@ -45,10 +45,10 @@
                 <h6>Latest</h6>
                 <ul class="footer--latest list-unstyled">
                   <li class="footer__nav-right__item">
-                    <a href="/events" class="d-flex">Events</a>
+                    <a href="https://santamonica.gov/events" class="d-flex">Events</a>
                   </li>
                   <li class="footer__nav-right__item">
-                    <a href="/news" class="d-flex">News</a>
+                    <a href="https://santamonica.gov/news" class="d-flex">News</a>
                   </li>
                 </ul>
 
@@ -60,17 +60,17 @@
                 <h6>Legal</h6>
                 <ul class="list-unstyled">
                   <li class="footer__nav-right__item">
-                    <a href="/disclaimer" class="d-flex">Disclaimer</a>
+                    <a href="https://santamonica.gov/disclaimer" class="d-flex">Disclaimer</a>
                   </li>
                   <li class="footer__nav-right__item">
                     <a
-                      href="/city-of-santa-monica-s-privacy-and-security-statement"
+                      href="https://santamonica.gov/city-of-santa-monica-s-privacy-and-security-statement"
                       class="d-flex"
                       >Privacy Policy</a
                     >
                   </li>
                   <li class="footer__nav-right__item">
-                    <a href="/accessibility-policy" class="d-flex"
+                    <a href="https://santamonica.gov/accessibility-policy" class="d-flex"
                       >Accessibility Policy</a
                     >
                   </li>
