--- a/ckanext/santamonica/templates/home/index.html
+++ b/ckanext/santamonica/templates/home/index.html
@@ -6,7 +6,7 @@ h.get_site_statistics() %} {% block styles %} {{ super() }} {% asset
     <div
       class="hero"
       style="
-        background-image: url('https://smgov-ckan-storage.s3.us-west-2.amazonaws.com/assets/BackgroundBanner.avif');
+        background-image: url('https://smgov-ckan-storage.s3.us-west-2.amazonaws.com/assets/BackgroundBanner.png');
       "
     >
       <div class="hero__inner">
